cabal-version:       2.4
name:                pure-simple-blog
version:             0.1.0.0

executable pure-simple-blog
  hs-source-dirs: src

  other-modules:
    Shared

  build-depends:
    base,
    pure,
    pure-auth,
    pure-conjurer,
    pure-convoker,
    pure-magician

  if !(impl(ghcjs))
    main-is: Server.hs
    build-depends:
      pandoc
    ghc-options: -O -threaded -rtsopts -with-rtsopts=-N
    other-modules:
      Markdown
  else
    main-is: Client.hs
    ghc-options: -dedupe -O -DGHCJS_BROWSER

  default-language: Haskell2010
  
  default-extensions:
    BlockArguments
    TypeApplications
    DerivingVia
    DerivingStrategies
    DeriveAnyClass
    DeriveGeneric
    RecordWildCards
    ConstraintKinds
    RankNTypes
    FlexibleContexts 
    ScopedTypeVariables
    FlexibleInstances
    OverloadedStrings
    PartialTypeSignatures
    LambdaCase
    ViewPatterns
    RoleAnnotations
    DataKinds
    KindSignatures
    PolyKinds
    NamedFieldPuns
    PostfixOperators
    DuplicateRecordFields
    BangPatterns
    ParallelListComp
    TypeOperators
    TypeFamilies