cabal-version:       2.4
name:                pure
version:             0.8.0.0

source-repository head
  type: git
  location: https://github.com/grumply/pure.git

library
  hs-source-dirs: src
  
  build-depends:
    aeson,
    aeson-pretty,
    array,
    async,
    base,
    bytestring,
    containers,
    deepseq,
    directory,
    ef,
    filepath,
    ghc-prim,
    hashable,
    mtl,
    transformers,
    origami-fold,
    random,
    stm,
    tagsoup,
    primitive,
    template-haskell,
    text,
    time,
    vector,
    unordered-containers,
    xss-sanitize,
    unix,
    base64-bytestring,
    comonad,
    unbounded-delays,
    parallel

  hs-source-dirs: src

  if impl(ghcjs)

    build-depends:
      ghcjs-base

    js-sources: 
      js/intersection-shim.js
      js/ric-shim.js
      js/lz-string.js
      js/selection.js

    other-modules:
      Data.Fetch.GHCJS
      Data.JSON.GHCJS
      Data.Time.GHCJS
      Data.Txt.GHCJS
      Data.Websocket.Internal.GHCJS

  if !(impl(ghcjs))

    exposed-modules:
      Server

    build-depends:
        binary
      , text
      , lens
      , wreq
      , unix-bytestring
      , websockets
      , connection
      , network
      , io-streams
      , HsOpenSSL
      , openssl-streams
      , iproute
      , warp
      , warp-tls
      , wai
      , http-types
      , cryptonite

    other-modules:
      Data.Fetch.GHC
      Data.JSON.GHC
      Data.Time.GHC
      Data.Txt.GHC
      Data.Websocket.Internal.GHC

  exposed-modules:
    Pure
    Client
    Data.AB
    Data.Animation
    Data.Bloom
    Data.Bloom.Limiter
    Data.Bloom.Scalable
    Data.Covariance
    Data.Controller
    Data.Component
    Data.CSS
    Data.DOM
    Data.Default
    Data.Ease
    Data.Events
    Data.Exists
    Data.Fetch
    Data.Fetch.Response
    Data.File
    Data.HTML
    Data.Idle
    Data.JSON
    Data.Key
    Data.Limiter
    Data.Localstorage
    Data.Log
    Data.Marker
    Data.Point
    Data.Queue
    Data.Random
    Data.Random.Generator
    Data.Random.Internal
    Data.Retry
    Data.Router
    Data.Series
    Data.Scroll
    Data.Shadows
    Data.Slug
    Data.Sorcerer
    Data.Sorcerer.Sorcery
    Data.SVG
    Data.Stream
    Data.Styles
    Data.Subscribe
    Data.Theme
    Data.Time
    Data.Time.Internal
    Data.Trace
    Data.Try
    Data.Txt
    Data.Txt.Trie
    Data.URI
    Data.Variance
    Data.View
    Data.View.Build
    Data.View.Parse
    Data.View.Reflect
    Data.View.Render
    Data.View.Sanitize
    Data.View.Transform
    Data.Websocket
    Effect.Intersection
    Effect.Meta
    Effect.Router
    Effect.Script
    Effect.Stream
    Effect.Styles
    Effect.Title
    Effect.Websocket
    Endpoint
    Web
    Web.DataTransfer
    Web.Events
    Web.File
    Web.Iterable
    Web.Range
    
  other-modules:
    Data.Sorcerer.Aggregable
    Data.Sorcerer.Aggregate
    Data.Sorcerer.Aggregator
    Data.Sorcerer.Dispatcher
    Data.Sorcerer.JSON
    Data.Sorcerer.Log
    Data.Sorcerer.Manager
    Data.Sorcerer.Queue
    Data.Sorcerer.Streamable
    Data.Websocket.API.Implementation
    Data.Websocket.API.Interface
    Data.Websocket.API.ProxyList
    Data.Websocket.API
    Data.Websocket.Callbacks
    Data.Websocket.Dispatch
    Data.Websocket.Endpoint
    Data.Websocket.Events
    Data.Websocket.Handlers
    Data.Websocket.Internal
    Data.Websocket.Identify
    Data.Websocket.Message
    Data.Websocket.Request
    Data.Websocket.TypeRep

  default-language: Haskell2010
